# NBA_PREDCITOR

./: Dockerfile  README.md  docker-compose.yml  main.py  nba_predictor.db  pyproject.toml  requirements.txt  setup.py
config/: api_settings.py  settings.py
dashboard/: app.py
dashboard/static/: dashboard.js  styles.css
dashboard/templates/: dashboard.html
data/: api_client.py  schedule.py  season_results.py  synchronizer.py  team_data.py
data/cache/: full_sync_cache.json
database/: models.py
engine/: elo.py  feature_engineering.py  prediction_tracker.py  predictor.py  probability_model.py  season_simulator.py
reports/: html_report.py
tests/: confest.py  test_elo.py  test_predictor.py  test_probability_model.py  test_season_simulator.py
