[project]
name = "nba-predictor"
version = "1.0.0"
description = "NBA game & season prediction engine (Elo + Monte Carlo) with Flask/Plotly dashboard"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "flask>=3.0.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
    "nba-api>=1.1.0",
    "pandas>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]